[tool.poetry]
name = "sankey"
version = "0.1.0"
description = "A project to create a basic Sankey diagram in Python"
authors = ["Filip Vašš"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sankey = "sankey:create_sankey"
